--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 						<muleVersion>4.4.0</muleVersion>
 						<username>satyaaa</username>
 						<password>Naveen@123</password>
-						<applicationName>clientApp</applicationName>
+						<applicationName>mvn-app1</applicationName>
 						<environment>Sandbox</environment>
 						<region>us-east-2</region>
 						<workers>1</workers>
